# colorengine

./: environment.yaml  pyproject.toml  readme.md
.github/workflows/: build.yml
colorengine/: __init__.py
colorengine/colormaps/: __init__.py  discrete_defaults.py  dream.py  icecream.py  warm.py
figures/: create_maps.py
