[build-system]
requires = ["setuptools>=45",
        "wheel",
        "setuptools_scm>=6.2",
        "numpy",
        "matplotlib>=3.9",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "colorengine"
authors = [
    {name = "Casper van Elteren", email = "caspervanelteren@gmail.com"},
]
description = "A collection of custom matplotlib colormaps"
readme = "readme.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.6",
    "numpy",
]
dynamic = ["version"]


[tool.setuptools.packages.find]
where = ["."]
include = ["colorengine"]

[project.urls]
Homepage = "https://github.com/cvanelteren/colorengine"
